--- a/Notebooks/EsperimentiYOLO2.ipynb
+++ b/Notebooks/EsperimentiYOLO2.ipynb
@@ -95,107 +95,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "id": "47592567",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading https://github.com/ultralytics/assets/releases/download/v8.3.0/yolo11n.pt to 'yolo11n.pt': 100%|██████████| 5.35M/5.35M [00:00<00:00, 28.8MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Usiamo la libreria ultralytics per fare inferenza con YOLO11n\n",
     "from ultralytics import YOLO\n",
     "\n",
     "# Load a model\n",
-    "model = YOLO(\"yolo11n.pt\")  # load an official model"
+    "model = YOLO(\"yolov8n.pt\") #esporta in .pt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "94d81fe8",
+   "execution_count": null,
+   "id": "24c93bc5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "image 1/1 /Users/alessioprato/Desktop/Tesi Nuova/ESP32CAM_ESPIDF/Notebooks/../../Foto/example.jpg: 480x640 1 person, 1 clock, 91.2ms\n",
-      "Speed: 3.5ms preprocess, 91.2ms inference, 5.2ms postprocess per image at shape (1, 3, 480, 640)\n",
-      "Results saved to \u001b[1m../../FotoInference/detection\u001b[0m\n",
-      "results: [ultralytics.engine.results.Results object with attributes:\n",
-      "\n",
-      "boxes: ultralytics.engine.results.Boxes object\n",
-      "keypoints: None\n",
-      "masks: None\n",
-      "names: {0: 'person', 1: 'bicycle', 2: 'car', 3: 'motorcycle', 4: 'airplane', 5: 'bus', 6: 'train', 7: 'truck', 8: 'boat', 9: 'traffic light', 10: 'fire hydrant', 11: 'stop sign', 12: 'parking meter', 13: 'bench', 14: 'bird', 15: 'cat', 16: 'dog', 17: 'horse', 18: 'sheep', 19: 'cow', 20: 'elephant', 21: 'bear', 22: 'zebra', 23: 'giraffe', 24: 'backpack', 25: 'umbrella', 26: 'handbag', 27: 'tie', 28: 'suitcase', 29: 'frisbee', 30: 'skis', 31: 'snowboard', 32: 'sports ball', 33: 'kite', 34: 'baseball bat', 35: 'baseball glove', 36: 'skateboard', 37: 'surfboard', 38: 'tennis racket', 39: 'bottle', 40: 'wine glass', 41: 'cup', 42: 'fork', 43: 'knife', 44: 'spoon', 45: 'bowl', 46: 'banana', 47: 'apple', 48: 'sandwich', 49: 'orange', 50: 'broccoli', 51: 'carrot', 52: 'hot dog', 53: 'pizza', 54: 'donut', 55: 'cake', 56: 'chair', 57: 'couch', 58: 'potted plant', 59: 'bed', 60: 'dining table', 61: 'toilet', 62: 'tv', 63: 'laptop', 64: 'mouse', 65: 'remote', 66: 'keyboard', 67: 'cell phone', 68: 'microwave', 69: 'oven', 70: 'toaster', 71: 'sink', 72: 'refrigerator', 73: 'book', 74: 'clock', 75: 'vase', 76: 'scissors', 77: 'teddy bear', 78: 'hair drier', 79: 'toothbrush'}\n",
-      "obb: None\n",
-      "orig_img: array([[[149, 159, 143],\n",
-      "        [148, 158, 142],\n",
-      "        [148, 158, 142],\n",
-      "        ...,\n",
-      "        [177, 182, 167],\n",
-      "        [177, 182, 167],\n",
-      "        [177, 182, 167]],\n",
-      "\n",
-      "       [[152, 162, 146],\n",
-      "        [152, 162, 146],\n",
-      "        [152, 162, 146],\n",
-      "        ...,\n",
-      "        [177, 182, 167],\n",
-      "        [177, 182, 167],\n",
-      "        [177, 182, 167]],\n",
-      "\n",
-      "       [[159, 166, 151],\n",
-      "        [159, 166, 151],\n",
-      "        [158, 165, 150],\n",
-      "        ...,\n",
-      "        [177, 182, 167],\n",
-      "        [177, 182, 167],\n",
-      "        [177, 182, 167]],\n",
-      "\n",
-      "       ...,\n",
-      "\n",
-      "       [[ 77,  92, 125],\n",
-      "        [ 77,  92, 125],\n",
-      "        [ 76,  93, 126],\n",
-      "        ...,\n",
-      "        [ 41,  57,  56],\n",
-      "        [ 41,  57,  56],\n",
-      "        [ 41,  57,  56]],\n",
-      "\n",
-      "       [[ 77,  92, 125],\n",
-      "        [ 78,  93, 126],\n",
-      "        [ 76,  93, 126],\n",
-      "        ...,\n",
-      "        [ 40,  56,  55],\n",
-      "        [ 40,  56,  55],\n",
-      "        [ 41,  57,  56]],\n",
-      "\n",
-      "       [[ 78,  93, 126],\n",
-      "        [ 78,  93, 126],\n",
-      "        [ 77,  94, 127],\n",
-      "        ...,\n",
-      "        [ 38,  56,  55],\n",
-      "        [ 38,  56,  55],\n",
-      "        [ 38,  56,  55]]], shape=(480, 640, 3), dtype=uint8)\n",
-      "orig_shape: (480, 640)\n",
-      "path: '/Users/alessioprato/Desktop/Tesi Nuova/ESP32CAM_ESPIDF/Notebooks/../../Foto/example.jpg'\n",
-      "probs: None\n",
-      "save_dir: '../../FotoInference/detection'\n",
-      "speed: {'preprocess': 3.494375036098063, 'inference': 91.1882920190692, 'postprocess': 5.1520419656299055}]\n"
+      "images\n",
+      "Input shape: [1, 3, 640, 640]\n"
      ]
     }
    ],
    "source": [
-    "# Predict with the model\n",
-    "nomeImmagine = \"../../Foto/example.jpg\"\n",
+    "#verifica dimensione input del modello\n",
+    "import onnx\n",
+    "\n",
+    "model = onnx.load(\"yolov8n.onnx\")\n",
+    "for input in model.graph.input:\n",
+    "    print(input.name)\n",
+    "    shape = [dim.dim_value for dim in input.type.tensor_type.shape.dim]\n",
+    "    print(\"Input shape:\", shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27fcce32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.export(format=\"onnx\") #esporta in .onnx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94d81fe8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inference and save results with Ultralytics\n",
+    "nomeImmagine = \"../../Calibrazione/immagini_calibrazione640x480/capture(1).jpg\"\n",
     "results = model.predict(\n",
     "    nomeImmagine, \n",
     "    save=True, \n",
@@ -204,11 +160,39 @@
     ")\n",
     "print(\"results:\", results)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9de977a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#quantizzazione del modello che non funziona\n",
+    "import sys, os\n",
+    "import esp_ppq\n",
+    "#sys.path.append(os.path.abspath(\"esp-detection\"))\n",
+    "from deploy.quantize import quant_espdet\n",
+    "\n",
+    "import onnx\n",
+    "from onnxsim import simplify\n",
+    "\n",
+    "quant_espdet(\n",
+    "    onnx_path=\"yolo11n.onnx\",      # onnx appena esportato\n",
+    "    target=\"esp32s3\",              \n",
+    "    num_of_bits=8,                 # quantizzazione int8\n",
+    "    device='cpu',\n",
+    "    batchsz=1,\n",
+    "    imgsz=[640, 640],              # deve combaciare con la dimensione del modello\n",
+    "    calib_dir=\"../../Calibrazione/immagini_ridimensionate640x640/\",        #  cartella immagini reali\n",
+    "    espdl_model_path=\"yolo11n.espdl\"\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NewNotebooks",
+   "display_name": "NewNotebooks2",
    "language": "python",
    "name": "esp32cam_venv"
   },
